# VibraCore

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
services/product_service/: Dockerfile  main.py
services/product_service/tests/: test_initial.py
services/review_service/: Dockerfile  main.py
